# btc-merkle-tree

./: CMakeLists.txt  LICENSE  README.md
include/: MerkleNode.h  MerkleTree.h  NodeHash.h  main.h
src/: MerkleNode.cc  MerkleTree.cc  NodeHash.cc  main.cc
